Changelog for GEMC
==================

3/18/16
 - to physics catalogue:
 - hPairProd
 - ionIon
 - tInelastic
 - kaon-Inelastic
 - added notice in V(t) routine
 - implemented rayleigh scattering in the material properties.

3/17/16
 - Modified time-walk functional to follow Haiyun's recommendation


3/11/16
 - removed unnecessary trueInfos instantiation in bst hit process

3/9/16
 - finalized background saving algorithm
 - saving time information of the track
 - adding MERGE_LUND_BG option to merge events from the LUND format.
   This includes timing information.
 - MERGE_LUND_BG option is now operative

3/8/16
 - parsing micromegas hit process routine
 - with SAVE_ALL_MOTHERS set to 2, all particles generating hits are saved in LUND format
   exception: if the mother also is a particle generating hit, only the mother is saved - unless SAVE_ALL_MOTHERS is set to 3
   Implementation not complete on 3/8/16

3/7/16
 - added time to bst digitized info. bco is a random number between 0 and 255.
 - normalizing cosmics distribution to lower momentum limit

3/4/16
 - fixed bst routine
 - added export to PDF button

3/2/16
 - removed CCGas from hardcoded cpp materials, added in ltcc system
 - refurbished ltcc hit process routine. Added nphotonarrived variables as opposed to detected.
 - minor improvements on htcc hit process routine

3/1/16
 - added 100 segments lines per circle when inspecting a detector
 - fixed strip identification for bst routine
 - added max number of steps for a track: 10,000. Apparently there are situations where
   particles loop too much in a magnetic field

2/29/16
 - removed obsolete cpp materials
 - added button to write single volumes or all volumes to WRL

2/9/16
 - added muPairProd to the map of processes in the output
 - added buttons to export a detector or the whole root in gdml format
 - added button to inspect detector in a new window
 - added buttons to print screenshots in png EPS format

2/7/16